# fantastic-disco

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml  flake.nix
.cargo/: config
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: rust.yml
src/: main.rs
