[package]
name = "fantastic-disco"
version = "0.1.0"
edition = "2021"

[dependencies.microbit-v2]
version = "0.14.0"
optional = true

[dependencies.microbit]
version = "0.14.0"
optional = true

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.4"
panic-halt = "0.2.0"

[dev-dependencies]
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }


[features]
default = ["microbit-v2"]
v2 = ["microbit-v2"]
v1 = ["microbit"]
